# Ornaments

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  convert_genomic_vcf_to_transcriptomic_vcf.py  create_personalized_transcriptome.py  merge_transcriptome_vcfs.py  meta.yaml  ornaments.yaml
examples/: HG00405.diploid.fa  HG00405.ornament.fa  HG00405.ornament.index  HG00405_1.fastq  SAMPLE_2.fastq  sorted.transcriptome.vcf  transcriptome.vcf  truncated_chr1.transcriptome.coords  truncated_chr1.transcriptome.vcf  truncated_transcriptome.fasta  truncated_v36.annotation.gtf
ext/htslib/tmp/: htslib-cfgcmd.txt
src/: Bootstrap.cpp  CMakeLists.txt  EMAlgorithm.h  KmerIndex.cpp  KmerIndex.h  MinCollector.cpp  MinCollector.h  ProcessReads.cpp  ProcessReads.h  common.h  main.cpp  tags  weights.cpp  weights.h
